--- a/work1/about.html
+++ b/work1/about.html
@@ -6,6 +6,9 @@
     <title>About</title>
 </head>
 <body>
+    <a href="/assignments/work1/index.html">Index</a>
+    <a href="/assignments/work1/pages/pro.html">Pro</a>
+    <a href="/assignments/work1/pages/single/one.html">one</a>
     <img src="images/2.png" alt="img2">
     <img src="images/i.jpeg" alt="img1">
     <img src="images/products/p1.jpg" alt="p1">
