--- a/work1/index.html
+++ b/work1/index.html
@@ -6,6 +6,9 @@
     <title>Index</title>
 </head>
 <body>
+    <a href="/assignments/work1/about.html">About</a>
+    <a href="/assignments/work1/pages/pro.html">Pro</a>
+    <a href="/assignments/work1/pages/single/one.html">One</a>
    <img src="images/i.jpeg" alt="image1"> 
    <img src="images/2.png" alt="image2">
    <img src="images/products/p1.jpg" alt="p1">
