--- a/work1/pages/pro.html
+++ b/work1/pages/pro.html
@@ -6,6 +6,10 @@
     <title>prohtml</title>
 </head>
 <body>
+    <a href="/assignments/work1/about.html">About</a>
+    <a href="/assignments/work1/index.html">Index</a>
+    <a href="/assignments/work1/pages/pro.html">Pro</a>
+    <a href="/assignments/work1/pages/single/one.html">One</a>
     <img src="../images/i.jpeg" alt="img1">
     <img src="../images/2.png" alt="img2">
     <img src="../images/products/p1.jpg" alt="p1">
