--- a/work5/web.html
+++ b/work5/web.html
@@ -5,13 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my website</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.html">
+    <style>
+        /* li {
+            float: left;
+        } */
+        /* li a{
+            color: white;
+            text-decoration: none;
+            padding: 14px 16px;
+        } */
+    </style>
 </head>
 <body>
     <div class="box1">
         <h1 class="head">Welcome to My Website</h1>
-        <div>
-            
-        </div>
     </div>
+        <div class="box2">
+            <ul type="none">
+                <li><a href="#home">HOME</a></li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+                <li><a href="#services"></a>SERVICES</li>
+            </ul>
+        </div>
+    
 </body>
 </html>
