--- a/work5/web.html
+++ b/work5/web.html
@@ -23,7 +23,7 @@
     </div>
         <div class="box2">
             <ul type="none">
-                <li><a href="#home">HOME</a></li>
+                <li><a href="home.html">HOME</a></li>
                 <li><a href="#about">ABOUT</a></li>
                 <li><a href="#contact">CONTACT</a></li>
                 <li><a href="#services"></a>SERVICES</li>
