--- a/work5/web.html
+++ b/work5/web.html
@@ -5,30 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my website</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="home.html">
-    <style>
-        /* li {
-            float: left;
-        } */
-        /* li a{
-            color: white;
-            text-decoration: none;
-            padding: 14px 16px;
-        } */
-    </style>
 </head>
 <body>
     <div class="box1">
-        <h1 class="head">Welcome to My Website</h1>
+        <h2 class="head">Welcome to My Website</h2>
     </div>
         <div class="box2">
             <ul type="none">
-                <li><a href="home.html">HOME</a></li>
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-                <li><a href="#services"></a>SERVICES</li>
+                <li><a href="web.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="services.html">Services</a></li>
             </ul>
         </div>
-    
+        <div class="box3">
+            <p>This is a basic website built with CSS and HTML</p>
+        </div>
+        
 </body>
 </html>
