--- a/work5/contact.html
+++ b/work5/contact.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="common">
+    <ul type="none">
+        <li><a href="web.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="services.html">Services</a></li>
+    </ul>
+</div class="p1">
   <h2>Contact</h2>
   <p>I'm here to help and eager to hear from you. If you have questions, comments, or any feedback, please don't hesitate to reach out to me.<br>Here are the ways you can get in touch:
 </p>  
 <ul type="none">
-    <li>Email :<a href="#email"> nmj41198@gmail.com</a></li>
+    <li>Email :<a href="#email">nmj41198@gmail.com</a></li>
     <li>Phone no :123456789</li>
 </ul>
 </body>
