--- a/work5/web.html
+++ b/work5/web.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="box3">
-            <p>This is a basic website built with CSS and HTML</p>
+            <p class="p1">This is a basic website built with CSS and HTML</p>
         </div>
         
 </body>
