--- a/work5/about.html
+++ b/work5/about.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="common">
+        <ul type="none">
+            <li><a href="web.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="services.html">Services</a></li>
+        </ul>
+    </div>
     <h2>About</h2>
     <p>This is my first website made by using HTML and CSS</p>
 </body>
