--- a/work5/services.html
+++ b/work5/services.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="common">
+        <ul type="none">
+            <li><a href="web.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="services.html">Services</a></li>
+        </ul>
+    </div>
 </body>
 </html>
