--- a/work5/about.html
+++ b/work5/about.html
@@ -15,7 +15,9 @@
             <li><a href="services.html">Services</a></li>
         </ul>
     </div>
-    <h2>About</h2>
-    <p>This is my first website made by using HTML and CSS</p>
+    <div class="box3">
+        <h2 class="h">About</h2>
+    <p class="h">This is my first website made by using HTML and CSS</p>
+    </div>
 </body>
 </html>
