--- a/work5/contact.html
+++ b/work5/contact.html
@@ -14,13 +14,13 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="services.html">Services</a></li>
     </ul>
-</div class="p1">
-  <h2>Contact</h2>
-  <p>I'm here to help and eager to hear from you. If you have questions, comments, or any feedback, please don't hesitate to reach out to me.<br>Here are the ways you can get in touch:
+</div>
+<div class="box3">
+  <h2 class="h">Contact</h2>
+  <p class="h">I'm here to help and eager to hear from you. If you have questions, comments, or any feedback, please don't hesitate to reach out to me.<br>Here are the ways you can get in touch:
 </p>  
-<ul type="none">
-    <li>Email :<a href="#email">nmj41198@gmail.com</a></li>
-    <li>Phone no :123456789</li>
-</ul>
+  <p class="h">Email:<a href="#">nmj41198@gmail.com</a></p>
+  <p class="h">Phone no:123456789</p>
+</div>
 </body>
 </html>
