--- a/work5/services.html
+++ b/work5/services.html
@@ -15,5 +15,13 @@
             <li><a href="services.html">Services</a></li>
         </ul>
     </div>
+    <div class="box3">
+        <h2 class="h">Our Services</h2>
+        <p class="h">.Web Development</p>
+        <p class="h">.Grapic Design</p>
+        <p class="h">.SEO</p>
+
+
+    </div>
 </body>
 </html>
