--- a/work5/home.html
+++ b/work5/home.html
@@ -15,5 +15,8 @@
             <li><a href="services.html">Services</a></li>
         </ul>
     </div>
+    <div class="box3">
+
+    </div>
 </body>
 </html>
