--- a/work5/about.html
+++ b/work5/about.html
@@ -16,8 +16,10 @@
         </ul>
     </div>
     <div class="box3">
-        <h2 class="h">About</h2>
+        <div class="innerbox">
+            <h2 class="h">About</h2>
     <p class="h">This is my first website made by using HTML and CSS</p>
+        </div>
     </div>
 </body>
 </html>
