--- a/work5/contact.html
+++ b/work5/contact.html
@@ -16,11 +16,13 @@
     </ul>
 </div>
 <div class="box3">
-  <h2 class="h">Contact</h2>
+  <div class="innerbox">
+    <h2 class="h">Contact</h2>
   <p class="h">I'm here to help and eager to hear from you. If you have questions, comments, or any feedback, please don't hesitate to reach out to me.<br>Here are the ways you can get in touch:
 </p>  
   <p class="h">Email:<a href="#">nmj41198@gmail.com</a></p>
   <p class="h">Phone no:123456789</p>
+  </div>
 </div>
 </body>
 </html>
