--- a/work5/web.html
+++ b/work5/web.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="box3">
-            <div class="box3.1">
+            <div class="innerbox">
                 <h3 class="h">Hi,I'm Neeraj M J</h3>
             <h4 class="h">Welocome to My Website</h4>
             <p class="h">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum ducimus, beatae obcaecati sint blanditiis distinctio soluta, repellendus sunt natus officia voluptates, impedit corporis nobis incidunt asperiores eius qui ab molestias.</p>
