--- a/work5/services.html
+++ b/work5/services.html
@@ -16,11 +16,14 @@
         </ul>
     </div>
     <div class="box3">
-        <h2 class="h">Our Services</h2>
+        <div class="innerbox">
+            <h2 class="h">Our Services</h2>
         <p class="h">.Web Development</p>
         <p class="h">.Grapic Design</p>
         <p class="h">.SEO</p>
 
+        </div>
+        
 
     </div>
 </body>
