--- a/work1/index.html
+++ b/work1/index.html
@@ -4,15 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <style>
+        img{
+            width: 110px;
+            height: 110px;
+        }
+    </style>
 </head>
 <body>
-    <a href="/assignments/work1/about.html">About</a>
-    <a href="/assignments/work1/pages/pro.html">Pro</a>
-    <a href="/assignments/work1/pages/single/one.html">One</a>
-   <img src="images/i.jpeg" alt="image1"> 
-   <img src="images/2.png" alt="image2">
+   <img src="images/1.jpg" alt="image1"> 
+   <img src="images/2.jpg" alt="image2">
    <img src="images/products/p1.jpg" alt="p1">
    <img src="images/products/p2.jpg" alt="p2">
    <img src="images/products/p3.jpg" alt="p3">
+   <a href="/assignments/work1/about.html">About</a>
+   <a href="/assignments/work1/pages/pro.html">Pro</a>
+   <a href="/assignments/work1/pages/single/one.html">One</a>
 </body>
 </html>
