--- a/work1/pages/pro.html
+++ b/work1/pages/pro.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>prohtml</title>
+    <style>
+        img{
+            width: 110px;
+            height: 110px;
+        }
+    </style>
 </head>
 <body>
+    <img src="../images/1.jpg" alt="img1">
+    <img src="../images/2.jpg" alt="img2">
+    <img src="../images/products/p1.jpg" alt="p1">
+    <img src="../images/products/p2.jpg" alt="p2">
+    <img src="../images/products/p3.jpg" alt="p3">
     <a href="/assignments/work1/about.html">About</a>
     <a href="/assignments/work1/index.html">Index</a>
     <a href="/assignments/work1/pages/pro.html">Pro</a>
     <a href="/assignments/work1/pages/single/one.html">One</a>
-    <img src="../images/i.jpeg" alt="img1">
-    <img src="../images/2.png" alt="img2">
-    <img src="../images/products/p1.jpg" alt="p1">
-    <img src="../images/products/p2.jpg" alt="p2">
-    <img src="../images/products/p3.jpg" alt="p3">
 </body>
 </html>
