--- a/work1/pages/single/one.html
+++ b/work1/pages/single/one.html
@@ -4,16 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Onehtml</title>
+    <style>
+        img{
+            width: 110px;
+            height: 110px;
+        }
+    </style>
     
 </head>
 <body>
-    <a href="/assignments/work1/about.html">About</a>
-    <a href="/assignments/work1/index.html">Index</a>
-    <a href="/assignments/work1/pages/pro.html">Pro</a>
-    <img src="/assignments/work1/images/2.png" alt="img2">
-    <img src="/assignments/work1/images/i.jpeg" alt="img1">
+    <img src="/assignments/work1/images/2.jpg" alt="img2">
+    <img src="/assignments/work1/images/1.jpg" alt="img1">
     <img src="/assignments/work1/images/products/p1.jpg" alt="p1">
     <img src="/assignments/work1/images/products/p2.jpg" alt="p2">
     <img src="/assignments/work1/images/products/p3.jpg" alt="p3">
+    <a href="/assignments/work1/about.html">About</a>
+    <a href="/assignments/work1/index.html">Index</a>
+    <a href="/assignments/work1/pages/pro.html">Pro</a>
 </body>
 </html>
