--- a/work2/blog.html
+++ b/work2/blog.html
@@ -7,7 +7,8 @@
 </head>
 <body>
    <h1>My Blog Post</h1> 
-   <p>Published on September 8,2023 by Neeraj M J<br> This is the introduction to my blog post</p>
+   <p>Published on September 8,2023 by Neeraj M J</p>
+   <p>This is the introduction to my blog post</p>
    <h2>Section 1 : The Beginning </h2>
    <p>This is the first section of my blog post </p>
    <h2>Section 2 : The Middle </h2>
@@ -18,7 +19,8 @@
     <li>Point 3</li>
    </ul>
    <h2>Section 3 : The End </h2>
-   <p>This is the final section of my blog post<br>Thanks for reading!</p>
+   <p>This is the final section of my blog post</p>
+   <p>Thanks for reading!</p>
    <a href="#">Back to top</a>
 </body>
 </html>
